<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    android:background="@drawable/imagen0001"
    tools:context=".Mainpotencia">


    <EditText
        android:id="@+id/edit01"
        android:layout_width="365dp"
        android:layout_height="wrap_content"
        android:hint="Número 1"
        android:inputType="numberDecimal"
        android:textColor="#131313"
        android:textColorHint="#0E0E0E"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.12" />

    <EditText
        android:id="@+id/edit02"
        android:layout_width="364dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#FFFFFF"
        android:hint="Número 2"
        android:inputType="numberDecimal"
        android:textColor="#151414"
        android:textColorHint="#101010"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.659"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.225" />

    <Button
        android:id="@+id/buttonPower"
        android:layout_width="279dp"
        android:layout_height="76dp"
        android:backgroundTint="#12FBF9F8"
        android:fontFamily="serif"
        android:onClick="onClick"
        android:text="Potencia"
        android:textColor="#F3EDED"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.354" />

    <TextView
        android:id="@+id/textViewResult"
        android:layout_width="321dp"
        android:layout_height="93dp"
        android:backgroundTint="#EDE7E7"
        android:hint="Resultado"
        android:text=""
        android:textColor="#F6F0F0"
        android:textColorHint="#F3EDED"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.457"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.537" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="259dp"
        android:layout_height="44dp"
        android:autoText="false"
        android:backgroundTint="#F1E9E9"
        android:text="OPERACION POTENCIA"
        android:textAlignment="center"
        android:textColor="#ECE7E7"
        android:textColorHint="#F3EFEF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <Button
        android:id="@+id/button1"
        android:layout_width="133dp"
        android:layout_height="64dp"
        android:backgroundTint="#FF9800"
        android:text="REGRESAR"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.015"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.941" />

    <Button
        android:id="@+id/btnFibonacci"
        android:layout_width="133dp"
        android:layout_height="64dp"
        android:backgroundTint="#FF9800"
        android:text="FIBONACCI"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.881"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.94" />

</androidx.constraintlayout.widget.ConstraintLayout>