<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".Mainfibonacci"
    android:background="@drawable/imagen4">


    <EditText
        android:id="@+id/editText01"
        android:layout_width="365dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#FFFFFF"
        android:drawableTint="#FFFFFF"
        android:foregroundTint="#FFFFFF"
        android:hint="Número 1"
        android:inputType="numberDecimal"
        android:textColor="#FAF6F6"
        android:textColorHint="#F4F1F1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.456"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.217" />


    <Button
        android:id="@+id/bottonfibo1"
        android:layout_width="279dp"
        android:layout_height="76dp"
        android:layout_below="@id/editText01"
        android:backgroundTint="#1DF8F2F1"
        android:fontFamily="serif"
        android:text="Fibonacci"
        android:textColor="#F4EFEF"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.309" />


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="364dp"
        android:layout_height="115dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.34"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.592">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/texfibo02"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="Resul-fibonacci"
                android:textAlignment="center"
                android:textColor="#F1EEEE"
                android:textColorHint="#F4F2F2">

            </TextView>

        </LinearLayout>

    </ScrollView>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="223dp"
        android:layout_height="43dp"
        android:text="OPERACION FIBONACCI"
        android:textAlignment="center"
        android:textColor="#FAF6F6"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.072" />

    <Button
        android:id="@+id/button01"
        android:layout_width="133dp"
        android:layout_height="64dp"
        android:backgroundTint="#E3382C"
        android:text="INICIO"
        android:textColor="#FDFCFC"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.015"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.941" />

    <Button
        android:id="@+id/btnfactorial01"
        android:layout_width="133dp"
        android:layout_height="64dp"
        android:backgroundTint="#E3382C"
        android:text="FACTORIAL"
        android:textColor="#F8F3F3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.881"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.94" />


</androidx.constraintlayout.widget.ConstraintLayout>