...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.215" />

    <Button
        android:id="@+id/buttonFactorial"
        android:layout_width="279dp"
        android:layout_height="76dp"
        android:backgroundTint="#16EFEDE9"
        android:fontFamily="serif"
        android:text="Factorial"
        android:textSize="25sp"
...
